# centrtransFastAPI

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ac0ff547c312_initial.py
api/: const.py  main_router.py  utils.py
api/routers/: ekl_report.py  hashpans.py
api/schemas/: ekl_report.py  hashpans.py
db/: conf.py  models.py  utils.py
settings/: settings.py
static/css/: styles.css
templates/: base.html  card_orders.html  ekl_report.html
templates/includes/: card_hashpan_form.html  ekl_report_form.html
templates/includes/base/: footer.html  head.html  header.html  scripts.html
templates/includes/sidebar/: registry_accordion.html  sidebar.html
tests/: test_hashpans.py
