[tool.poetry]
name = "hashpansfastapi"
version = "0.1.0"
description = ""
authors = ["BeepBoopYeetYourScoot <zavorotnii.dr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
black = "^24.4.0"
loguru = "^0.7.2"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
