[tool.poetry]
name = "hashpansfastapi"
version = "0.1.0"
description = ""
authors = ["BeepBoopYeetYourScoot <zavorotnii.dr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
black = "^24.4.0"
loguru = "^0.7.2"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
